--- a/index.html
+++ b/index.html
@@ -3,38 +3,125 @@
 
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-		integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+
+  <!-- CSS styling -->
 	<link rel="stylesheet" href="style.css">
 
-	<title>Learn2CodeBootstrap</title>
+	<title>Budgeting App</title>
 </head>
 
 <body>
 
-	<div class="container">container</div>
-	<div class="container-fluid">container-fluid</div>
+	<nav class="navbar navbar-expand-md navbar-light" style="background-color: #e3f2fd;">
+		<div class="container">
+			<a class="navbar-brand" href="#">
+				<!-- <img src="/images/somepicture.png" width="30" height="30"
+					alt="example how to put picture/logo next to brand link"> -->
+				BudgetApp
+			</a>
+			<button class="navbar-toggler" type="button" data-target:="#navigationId">
+				<span class="navbar-toggler-icon"></span>
+			</button>
 
-	<div class="container">
-		<div class="row">
-      <div class="col-2">column</div>
-      <div class="col-5 col-md-8">column</div>
-      <div class="col-5 col-md-2">column</div>
-      <div class="col">column</div>
+			<div class="collapse navbar-collapse" id="navigationId">
+
+				<ul class="navbar-nav">
+					<li class="nav-item-active">
+						<a class="nav-link" href="#">Add income/expense<span class="sr-only">(current)</span></a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Overview</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Filter</a>
+					</li>
+					<!-- <li class="nav-item">
+						<a class="nav-link disabled" href="#">Disabled</a>
+          </li> -->
+				</ul>
+			</div>
+		</div>
+	</nav>
+
+	<div class="container mt-3">
+		<h2>Net incomes - expenses</h2>
+		<div class="row text-center">
+			<div class="col headline-size">
+				<span class="badge badge-pill badge-success">4000</span> -
+				<span class="badge badge-pill badge-danger">4500</span>
+			</div>
 		</div>
 	</div>
 
+	<div class="container mt-4">
+		<h1>This Month</h1>
+		<div class="row">
+			<div class="col">
+				<p>Income: <span class="text-success">3500</span></p>
+				<p>Expenses: <span class="text-danger">3000</span></p>
+			</div>
+			<div class="col">
+				<canvas id="myChart" width="100" height="100"></canvas>
+			</div>
+			<div class="col">
+				<canvas id="myChart2" width="100" height="100"></canvas>
+			</div>
+		</div>
+	</div>
 
-  <div class="container">
-    <!-- <p> Extra small devices (portrait phones, less than 576px</p>
-    <p> Small devices (landscape phones, less than 768px</p>
-    <p> Medium devices (tablets, less than 992px</p>
-    <p> Large devices (desktops, less than 1200px</p> -->
+	<div class="container mt-4">
+		<h1>Last Month</h1>
+		<div class="row">
+			<div class="col">
+				<p>Income: <span class="text-success">3500</span></p>
+				<p>Expenses: <span class="text-danger">3000</span></p>
+			</div>
+			<div class="col-md-4"><canvas id="myChart3" width="100" height="100"></canvas></div>
+			<div class="col-md-4"><canvas id="myChart4" width="100" height="100"></canvas></div>
+		</div>
+	</div>
+
+	<div class="container" style="margin-top: 30px;">
+		<h2>Last added:</h2>
+		<div class="row">
+			<div class="col">
+				<dl>
+					<dt><a href="#">Dogs expenses</a></dt>
+					Recurring payments<dd><span class="badge badge-success"> $150</span></dd>
+
+					<dt><a href="#">New shoes</a></dt>
+					I needed new shoes, there wasn't anything cheaper.<dd><span class="badge badge-danger"> $50</span></dd>
+
+					<dt><a href="#">Food</a></dt>
+					<dd><span class="badge badge-danger"> $200</span></dd>
+				</dl>
+			</div>
+		</div>
   </div>
+  
+  <div class="container text-center mt-5">
+      <a href="#" class="btn btn-lg btn-info">Prehľad</a>
+  </div>
+
+  <div class="container-fluid"  style="margin-top: 100px; background-color: #e3f2fd; padding: 20px 0px;">
+      <div class="container">
+          <div class="row">
+              <div class="col">
+                  <footer>Income & Expenses - get it under control! Since 2020.</footer>
+              </div>
+          </div>
+      </div>
+  </div>
+  
+  <!-- You can use this inline styling to give your page scrolling property -->
+  <!-- <div style="line-height: 2000px;"></div> -->
+  
 	<!-- Optional JavaScript
   jQuery first, then Popper.js, then Bootstrap JS -->
 	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
@@ -46,7 +133,8 @@
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
 		integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous">
 	</script>
-
+	<script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
+	<script src="/graphs.js"></script>
 </body>
 
 </html>
