--- a/columns.html
+++ b/columns.html
@@ -1,5 +1,5 @@
 
-	<div class="container">container</div>
+	<!-- <div class="container">container</div>
 	<div class="container-fluid">container-fluid</div>
 
 	<div class="container">
@@ -9,14 +9,14 @@
 			<div class="col-5 col-md-2">column</div>
 			<div class="col">column</div>
 		</div>
-	</div>
+	</div> -->
 
 
-	<div class="container">
-		<!-- <p> Extra small devices (portrait phones, less than 576px</p>
+	<!-- <div class="container">
+		<p> Extra small devices (portrait phones, less than 576px</p>
     <p> Small devices (landscape phones, less than 768px</p>
     <p> Medium devices (tablets, less than 992px</p>
-    <p> Large devices (desktops, less than 1200px</p> -->
+    <p> Large devices (desktops, less than 1200px</p>
 	</div>
 
 	<div class="container-fluid">
@@ -131,4 +131,6 @@
 				Third, but first
 			</div>
 		</div>
-	</div>
+  </div> -->
+  
+  
