--- a/monthlyOverview.html
+++ b/monthlyOverview.html
@@ -72,17 +72,17 @@
 								</thead>
 								<tbody>
 									<tr>
-										<th scope="row">15.1</th>
+										<th scope="row">01/15</th>
 										<td><a href="#">Salary</a></td>
 										<td>Regular income</td>
 										<td class="text-success">690</td>
-                    <td><a href="#" class="btn btn-sm btn-primary">Edit <i class="far fa-edit ml-1"></i></a> 
-                        <a href="#" class="text-danger" style="margin-left: 5px" title="Delete">
+										<td><a href="#" class="btn btn-sm btn-primary">Edit <i class="far fa-edit ml-1"></i></a>
+											<a href="#" class="text-danger" style="margin-left: 5px" title="Delete">
 												<i class="far fa-trash-alt ml-1" data-toggle="tooltip" data-placement="right"
 													title="Delete"></i></a></td>
 									</tr>
 									<tr>
-										<th scope="row">15.1</th>
+										<th scope="row">01/15</th>
 										<td><a href="#">Bonus</a></td>
 										<td>Extra income</td>
 										<td class="text-success">54</td>
@@ -92,7 +92,7 @@
 													title="Delete"></i></a></td>
 									</tr>
 									<tr>
-										<th scope="row">17.1</th>
+										<th scope="row">01/17</th>
 										<td><a href="#">Gift</a></td>
 										<td>Extra income</td>
 										<td class="text-success">20</td>
@@ -100,6 +100,126 @@
 												class="text-danger" style="margin-left: 5px" title="Delete">
 												<i class="far fa-trash-alt ml-1" data-toggle="tooltip" data-placement="right"
 													title="Delete"></i></a></td>
+									</tr>
+								</tbody>
+							</table>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="container mt-5">
+		<div class="row">
+			<div class="col">
+				<div class="card mb-3">
+					<div class="card-header bg-danger text-white">Expenses</div>
+					<div class="card-body">
+						<div class="table-responsive">
+							<table class="table table-striped table-responsive-xs-12">
+								<thead>
+									<tr>
+										<th scope="col">Date</th>
+										<th scope="col">Item</th>
+										<th scope="col">Category</th>
+										<th scope="col">Price</th>
+										<th scope="col"></th>
+									</tr>
+								</thead>
+								<tbody>
+									<tr>
+										<th scope="row">01/01</th>
+										<td><a href="#">tv payment</a></td>
+										<td>loans</td>
+										<td class="text-danger">100</td>
+										<td><a href="#" class="btn btn-sm btn-primary">Edit <i class="far fa-edit ml-1"></i></a> <a
+												href="#" class="text-danger" style="margin-left: 5px" title="Delete">
+												<i class="far fa-trash-alt ml-1" data-toggle="tooltip" data-placement="right"
+													title="Delete"></i> </td>
+									</tr>
+									<tr>
+										<th scope="row">01/14</th>
+										<td><a href="#">new t-shirt</a></td>
+										<td>clothing</td>
+										<td class="text-danger">14.99</td>
+										<td><a href="#" class="btn btn-sm btn-primary">Edit <i class="far fa-edit ml-1"></i></a> <a
+												href="#" class="text-danger" style="margin-left: 5px" title="Delete">
+												<i class="far fa-trash-alt ml-1" data-toggle="tooltip" data-placement="right"
+													title="Delete"></i> </td>
+									</tr>
+									<tr>
+										<th scope="row">01/19</th>
+										<td><a href="#">gift</a></td>
+										<td>gifts</td>
+										<td class="text-danger">50</td>
+										<td><a href="#" class="btn btn-sm btn-primary">Edit <i class="far fa-edit ml-1"></i></a> <a
+												href="#" class="text-danger" style="margin-left: 5px" title="Delete">
+												<i class="far fa-trash-alt ml-1" data-toggle="tooltip" data-placement="right"
+													title="Delete"></i> </td>
+									</tr>
+								</tbody>
+							</table>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	</div>
+
+	<div class="container mt-5">
+		<div class="row">
+			<div class="col">
+				<div class="card mb-3">
+					<div class="card-header bg-info text-white ">Incomes / Expenses</div>
+					<div class="card-body">
+						<div class="table-responsive">
+							<table class="table">
+								<thead>
+									<tr>
+										<th scope="col">Date</th>
+										<th scope="col">Item</th>
+										<th scope="col">Category</th>
+										<th scope="col">Price</th>
+									</tr>
+								</thead>
+								<tbody>
+									<tr class="table-danger">
+										<th scope="row">01/01</th>
+										<td><a href="#">tv payment</a></td>
+										<td>loans</td>
+										<td class="text-danger">100</td>
+									</tr>
+									<tr class="table-danger">
+										<th scope="row">01/14</th>
+										<td><a href="#">new t-shirt</a></td>
+										<td>clothing</td>
+										<td class="text-danger">14.99</td>
+									</tr>
+									<tr class="table-success">
+										<th scope="row">01/15</th>
+										<td><a href="#">Salary</a></td>
+										<td>regular incomes</td>
+										<td class="text-success">690</td>
+									</tr>
+									<tr class="table-success">
+										<th scope="row">01/15</th>
+										<td><a href="#">bonus</a></td>
+										<td>extra incomes</td>
+										<td class="text-success">54</td>
+									</tr>
+									<tr class="table-success">
+										<th scope="row">01/17</th>
+										<td><a href="#">gift</a></td>
+										<td>extra incomes</td>
+										<td class="text-success">20</td>
+									</tr>
+									<tr class="table-danger">
+										<th scope="row">01/19</th>
+										<td><a href="#">gift</a></td>
+										<td>gifts</td>
+										<td class="text-danger">50</td>
 									</tr>
 								</tbody>
 							</table>
@@ -135,8 +255,8 @@
 		integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous">
 	</script>
 	<script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
-  <script src="/graphs.js"></script>
-  <script src="main.js"></script>
+	<script src="/graphs.js"></script>
+	<script src="main.js"></script>
 </body>
 
 </html>
